--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Banana 香蕉王子的Web架构测试</description>
 
     <properties>
         <java.version>8</java.version>
@@ -38,13 +37,6 @@
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
         </dependency>
-        <!--mybatis 联表wrapper-->
-        <dependency>
-            <groupId>com.github.yulichang</groupId>
-            <artifactId>mybatis-plus-join</artifactId>
-            <version>1.2.4</version>
-        </dependency>
-
 
         <!--③数据库相关-->
         <dependency>
