feature: AsyncContext实现长轮询相关内容测试

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,17 @@
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.66</version>
+        </dependency>
+        <!-- 使用 Spring Framework 中的 RedisTemplate -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
 
         <!--③数据库相关-->
         <dependency>
