--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
     port: 6666
 
-
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -10,3 +9,17 @@ spring:
       username: ${MYSQL_USER:root}
       password: ${MYSQL_PWD:123456}
       url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&allowMultiQueries=true&allowPublicKeyRetrieval=true
+  # 配置mq
+  rabbitmq:
+    host: 192.168.56.10
+    port: 5672
+    virtual-host: Banana-V-Host
+    # 开启发送端确认
+    publisher-confirm-type: correlated
+    # 开启发送端（生产者）消息抵达队列的确认
+    publisher-returns: true
+    template:
+      mandatory: true
+    listener:
+      simple:
+        acknowledge-mode: manual
