--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>-->
+
         <!--hutool 使用到了soap相关工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.8.14</version>
         </dependency>
-
 
         <!--②扩展依赖-->
         <!--lombok-->
