--- a/example2-server/pom.xml
+++ b/example2-server/pom.xml
@@ -9,30 +9,26 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>gateway</artifactId>
+    <!--项目的唯一标识符-->
+    <artifactId>example2-server</artifactId>
 
     <dependencies>
-        <!--<dependency>
+        <!-- ①核心基础依赖-->
+        <!--web服务快速启动依赖-->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>-->
+        </dependency>
+        <!--springboot test快速启动依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <!--
-        nacos 注册/发现中心依赖
-        版本匹配问题：https://blog.csdn.net/m0_64788735/article/details/139027594
-        -->
+        <!--nacos 注册中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
     </dependencies>
 
