--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 server:
-  port: 10010 # 网关端口
+  # 服务端口
+  port: 10010
+
 spring:
   application:
     name: gateway # 服务名称
   cloud:
-    discovery:
-      server-addr: 192.168.56.1:8848
+    nacos:
+      discovery:
+        server-addr: 192.168.56.1:8848
