--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,11 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.9</version>
         </dependency>
-
+        <!-- 集成redis(相关版本已经在上层父模板spring-boot-dependencies中声明)-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
